--- a/public/index.html
+++ b/public/index.html
@@ -1,28 +1,28 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" /> -->
     <!-- Favicon -->
     <!-- <link rel="icon" href="favicon.ico" type="image/x-icon" /> -->
     <!-- Google Fonts (Inter, Edu SA Beginner) -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
+<!--     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Edu+SA+Beginner:wght@400;500;600;700&family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap"
       rel="stylesheet"
-    />
+    /> -->
     <!-- Roboto Mono -->
-    <link
+<!--     <link
       href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap"
       rel="stylesheet"
     />
     <title>EduConnect</title>
-  </head>
+  </head> -->
 
-  <body>
+<!--   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <div id="root"></div> -->
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
@@ -33,5 +33,7 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-  </body>
-</html>
+<!--   </body>
+</html> -->
+
+<!doctype html><html lang="en"><head><meta charset="utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/><title>EduConnect.com</title><link rel="icon" href="https://th.bing.com/th?id=OIP.vOn3OpVqfY1bZqh3mac5xwHaHa&w=250&h=250&c=8&rs=1&qlt=90&o=6&dpr=1.5&pid=3.1&rm=2"><script defer="defer" src="/static/js/main.673c3902.js"></script><link href="/static/css/main.57330cc5.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div></body></html>
